# booking-and-referral-fhir-api

./: .a.swp  .at.swp  .be.swp  .file.swp  .flake8  .gitallowed  .gitattributes  .gitignore  .in.swp  .pre-commit-config.yaml  .stored.swp  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  get_token  lint-output.txt  manifest_template.yml  package-lock.json  package.json  pyproject.toml  sandbox.Dockerfile  test_variables.sh
.dependabot/: config.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  azure-release-template.yml  project.yml  run-terraform.yml
bars_aws_backend/: .envrc.default  .gitignore  Makefile  lambda.Dockerfile  pyproject.toml
bars_aws_backend/src/: basic_lambda_handler.py
infra/: .terraform.lock.hcl  Makefile  alb.tf  cert_storage.tf  fargate.tf  infra.tf  main.tf  nlb.tf  outputs.tf  registry.tf  security_groups.tf  subnets.tf  variables.tf  vpc_endpoints.tf  vpc_link.tf
mock-receiver/: Dockerfile  app.py  pyproject.toml
nhsd-git-secrets/: .gitallowed-base  README-mac-workstation.md  README.md  full-history-scan.sh  git-secrets  gitSecretsExample.Jenkinsfile  nhsd-git-secrets.dockerfile  nhsd-rules-linux-mac.txt  scan-repo-linux-mac.sh
receiver/: Dockerfile  README.md
sandbox/: .gitignore  Dockerfile  Makefile  README.md  app.js  app.spec.js  package-lock.json  package.json  requirements.txt
scripts/: pre-commit
specification/: bars.yaml  booking-and-referral-1.1.0.yaml  booking-and-referral-1.2.0.yaml  booking-and-referral-1.3.0.yaml  (+5 more)
(+558 files in other folders)
